--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -65,7 +65,7 @@
 
 				<h2 class="contacts-header">Адрес</h2>
 				<ul class="contacts-list">
-					<li class="contacts-list-item">ул. Святого Валентина, 25</li>
+					<li class="contacts-list-item">ул. Гетьмана Сагайдачного, 259</li>
 				</ul>
 			</div>
 		</div>
@@ -73,9 +73,9 @@
 	</div>
 
 	<div id="contacts-map">
-		<a href="https://goo.gl/maps/PXvcr4kWarE2" target="_blank">
+		<a href="https://goo.gl/maps/DY1CcwHSnNr" target="_blank">
 			<div class='content-container  embed-container  maps'>
-				<iframe style="pointer-events: none;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1965.0841363571221!2d24.03121830196611!3d49.841494711869366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x28c7c64d4a2cedf9!2z0JrRgNC40ZfQstC60LA!5e0!3m2!1sru!2sua!4v1488305313562" width="100%" height="584" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe style="pointer-events: none;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2498.0245820617633!2d32.099809384867235!3d49.40710339463012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d14a4957e95385%3A0xc1911954393dfda6!2z0LLRg9C70LjRhtGPINCT0LXRgtGM0LzQsNC90LAg0KHQsNCz0LDQudC00LDRh9C90L7Qs9C-LCAyNTksINCn0LXRgNC60LDRgdC4LCDQp9C10YDQutCw0YHRjNC60LAg0L7QsdC70LDRgdGC0Yw!5e0!3m2!1sru!2sua!4v1488573636853"" width="100%" height="584" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 		</a>
 		</div>
