Archive page, fixes
fix for long item names - home page
fix for prices - basket

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -51,7 +51,9 @@
 			<ul id="shop-goods-list">
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-1.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -59,7 +61,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-2.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -67,7 +71,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-3.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -75,7 +81,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-4.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Талея 201 роза</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Талея 201 роза</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -83,7 +91,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-5.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -91,7 +101,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-6.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -99,7 +111,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-1.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -107,7 +121,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-2.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -115,7 +131,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-3.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -123,7 +141,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-4.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Талея 201 роза</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Талея 101 роза</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -131,7 +151,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-5.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
@@ -139,7 +161,9 @@
 
 				<li class="shop-goods-item">
 					<img src="../img/home/flowers-6.jpg" alt="flowers">
-					<div class="shop-goods-item-name">Букет роз</div>
+					<div class="shop-goods-item-nameWrapper">
+						<div class="shop-goods-item-name">Букет роз</div>
+					</div>
 					<div class="shop-goods-item-price">2500грн</div>
 					<a href="#"><div class="shop-goods-item-btn">Купить</div></a>
 					<div class="shop-goods-item-state">Есть в наличии</div>
