profile/home pages update
- pagination for home page
- scroll btn to goods for home page
- profile/archive header changes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,15 @@
 
 //= template/header.html
 
+<section class="arrow-wrapper">
+	<div class="content">
+		<a href="#shop-goods-list" class="arrow">
+		<p class="arrow-text">к товарам</p>
+			<img src="../img/home/arrow.png" alt="arrow">
+		</a>
+	</div>
+</section>
+
 <section id="shop">
 	<div class="content">
 
@@ -172,6 +181,20 @@
 
 		</section>
 
+	</div>
+
+	<div class="content">
+		<section class="pagination">
+			
+			<ul class="pagination-list">
+				<li class="pagination-item-active"><a href="#">1</a></li>
+				<li class="pagination-item"><a href="#">2</a></li>
+				<li class="pagination-item"><a href="#">3</a></li>
+				<li class="pagination-item"><a href="#">4</a></li>
+				<li class="pagination-item"><a href="#">5</a></li>
+			</ul>
+
+		</section>
 	</div>
 </section>
 
